# opensky-pipeline

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
airflow/: Dockerfile
scripts/: explore-opensky.py  explore_opensky.py  verify_minio.py
src/opensky_pipeline/: config.py  exceptions.py  logging.py
src/opensky_pipeline/ingest/: auth.py  models.py  opensky.py
src/opensky_pipeline/storage/: s3.py
