[project]
name = "opensky-pipeline"
version = "0.1.0"
description = "Production-grade data pipeline for OpenSky Network flight data"
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "structlog>=24.2.0",
    "typer>=0.12.0",
    "boto3>=1.34.0",
    "s3fs>=2024.6.0",
    "pyarrow>=16.0.0",
    "tenacity>=8.4.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
spark = [
    "pyspark>=3.5.0",
]
bigquery = [
    "google-cloud-bigquery>=3.25.0",
    "google-cloud-storage>=2.18.0",
    "pandas-gbq>=0.23.0",
]
airflow = [
    # Airflow żyje w Dockerze - ta sekcja służy tylko podpowiedziom IDE
    # Nie instaluj tego lokalnie przez uv sync
    "apache-airflow>=3.0.0",
    "apache-airflow-providers-google>=10.0.0",
    "apache-airflow-providers-amazon>=8.20.0",
]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "respx>=0.21.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
    "types-boto3>=1.0.0",
]

[project.scripts]
pipeline-ctl = "opensky_pipeline.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/opensky_pipeline"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "RUF", # ruff-specific rules
]
ignore = ["E501"]  # line-too-long handled by formatter

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["pyspark.*", "airflow.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=opensky_pipeline",
    "--cov-report=term-missing",
    "--cov-report=html",
]
testpaths = ["tests"]
markers = [
    "integration: integration tests (require external services)",
    "slow: slow tests",
]

[tool.coverage.run]
source = ["src/opensky_pipeline"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
